src/objects/SSign__SSTemplate__c.object
<CustomObject>
    <fields>
        <fullName>SSign__Allow_Printing_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Printing Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Always_Show_Profile_Edit_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Show Profile Edit Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Document_Name__c</fullName>
        <inlineHelpText>If filled in, this will be the name of the Audit Trail document created in the S-Sign process involving this template. This field supports the merge-field {{!DocumentName}}.</inlineHelpText>
        <label>Audit Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Clear_Attachments_Upon_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Attachments Upon Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Confirm_Signing_Order_During_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Signing Order During Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Copy_First_Email_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy First Email Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Custom_List_of_Parties_to_Notify__c</fullName>
        <label>Custom List of Parties to Notify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Days_To_Expire__c</fullName>
        <label>Days To Expire</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Days_To_Remind__c</fullName>
        <label>Days To Remind</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Default_Signing_Order__c</fullName>
        <label>Default Signing Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Disable_Audit_Page_By_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Audit Page By Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Disable_Audit_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Audit Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Disable_Email_For_Sign_In_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Email For Sign In Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Disable_Email_Verification_For_Domains__c</fullName>
        <label>Disable Email Verification For Domains</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Disable_Email_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Email Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Disable_System_Emails__c</fullName>
        <label>Disable System Emails</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disable All System Emails</fullName>
                </value>
                <value>
                    <fullName>Disable Intermediate Emails</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSign__Documents_Saved_to_Base_Record__c</fullName>
        <label>Document(s) Saved to Base Record</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audit Document Only</fullName>
                    <default>true</default>
                    <label>Audit Document Only</label>
                </value>
                <value>
                    <fullName>Signed Document Only</fullName>
                </value>
                <value>
                    <fullName>Audit and Signed Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSign__Dont_Create_If_Active_Contracts_On_Rec__c</fullName>
        <label>Don&apos;t Create If Active Contracts On Rec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This Template</fullName>
                </value>
                <value>
                    <fullName>Any Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSign__Dont_Send_Confirmation_Email_To_Sender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Send Confirmation Email To Sender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Email_Template_All_Signers_Complete__c</fullName>
        <label>Email_Template_All_Signers_Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Email_Template_Partial_Confirmation__c</fullName>
        <label>Email Template - Partial Confirmation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Email_Template_Signer_Declined__c</fullName>
        <label>Email Template - Signer Declined</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Enable_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Enable_Send_Email_After_First_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Send Email After First Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Encrypt_Documents_At_Rest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encrypt Documents At Rest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Include_Digital_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Digital Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Input_Field_Group_Definitions__c</fullName>
        <label>Input Field Group Definitions</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Input_Field_Locations_XML__c</fullName>
        <label>Input Field Locations XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Input_Field_XML__c</fullName>
        <label>Input Field XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Mobile_PDF_Scale__c</fullName>
        <label>Mobile PDF Scale</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Notification_Email_From_Address__c</fullName>
        <label>Notification Email From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Only_Creator_Of_Contract_Can_Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Creator Of Contract Can Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Org_Agnostic_ID__c</fullName>
        <label>Org-Agnostic ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Org_Wide_From_Address__c</fullName>
        <formula>IF( 
NOT(SSign__SDTemplate__r.SDOC__Email_From_User_Override__c) &amp;&amp; NOT(ISNULL(SSign__SDTemplate__r.SDOC__Email_From_OrgWideAddressId__c) || (SSign__SDTemplate__r.SDOC__Email_From_OrgWideAddressId__c = &apos;1&apos;)), 
SSign__SDTemplate__r.SDOC__Email_From_OrgWideAddressId__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Wide From Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Parties_To_Notify_Upon_Void__c</fullName>
        <label>Parties To Notify Upon Void</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Parties</fullName>
                    <default>true</default>
                    <label>All Parties</label>
                </value>
                <value>
                    <fullName>No Parties</fullName>
                </value>
                <value>
                    <fullName>Requester</fullName>
                </value>
                <value>
                    <fullName>Person Who Voided Contract</fullName>
                </value>
                <value>
                    <fullName>Signers Who Have Already Signed</fullName>
                </value>
                <value>
                    <fullName>Active Signer</fullName>
                </value>
                <value>
                    <fullName>Signers After Active Signer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSign__Redirect_URL__c</fullName>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Regular_Reminder__c</fullName>
        <label>Regular Reminder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__SDTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S-Docs Template</label>
        <referenceTo>SDOC__SDTemplate__c</referenceTo>
        <relationshipLabel>S-Sign Templates</relationshipLabel>
        <relationshipName>SSign_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__SIP_Email_Sign_Links_Subsequent_Signers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sign Links To Subsequent Signers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Send_Confirmation_As_One_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Confirmation As One Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Send_Confirmation_To_From__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Confirmation To From</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Signature_Image_Scale__c</fullName>
        <label>Signature Image Scale</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Signed_Document_Name__c</fullName>
        <inlineHelpText>If filled in, this will be the name of the Signed (without Audit Trail) document created in the S-Sign process involving this template. This field supports the merge-field {{!DocumentName}}.</inlineHelpText>
        <label>Signed Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Signer_Profile_XML__c</fullName>
        <label>Signer Profile XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Timezone__c</fullName>
        <label>Timezone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Total_Reminders_To_Send__c</fullName>
        <label>Total Reminders To Send</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Use_Only_Pre_Configured_SSign_Tags__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Only Pre-Configured SSign Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Use_Topaz_For_Signing_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Topaz For Signing Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Zero_Click__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zero Click</label>
        <type>Checkbox</type>
    </fields>
    <label>S-Sign Template</label>
    <listViews>
        <fullName>SSign__All</fullName>
        <columns>NAME</columns>
        <columns>SSign__SDTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>S-Sign Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S-Sign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>